<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Nkhuku Management</string>
    <string name="web_client_ID" translatable="false"></string>
    <string name="home">Home</string>
    <string name="accounts">Accounts</string>
    <string name="tips">Tips</string>
    <string name="planner">Planner</string>
    <string name="overview">Overview</string>
    <string name="no_flocks_description">No flocks in inventory</string>
    <string name="add_flock">Add Flock</string>
    <string name="details">Details</string>
    <string name="weight">Weights</string>
    <string name="feed">Feed</string>
    <string name="edit_flock">Edit Flock</string>
    <string name="add_vaccinations">Add vaccinations</string>
    <string name="edit_vaccinations">Edit vaccinations</string>
    <string name="vaccinations">Vaccinations</string>
    <string name="back">Back</string>
    <string name="edit_weights">Edit Weights</string>
    <string name="estimation">Estimation</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transactions">Transactions</string>
    <string name="add_income">Add Income</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="edit_income">Edit Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="no_records">No records</string>
    <string name="no_income_recorded">No income recorded</string>
    <string name="no_expense_recorded">No expense recorded</string>
    <string name="account_overview">Account Overview</string>
    <string name="flock_overview">Flock Overview</string>
    <string name="flock">Flock</string>
...
    <string name="expenses">Expenses</string>
    <string name="profit">Profit</string>
    <string name="loss">Loss</string>
    <string name="break_even">Break-Even</string>
    <string name="please_enter_a_valid_number">Please enter a valid number.</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="supplier">Supplier</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="total_expense">Total Expense</string>
    <string name="notes">Notes</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="customer">Customer</string>
    <string name="total_income">Total Income</string>
    <string name="delete_expense">Delete expense?</string>
    <string name="this_cannot_be_undone">This cannot be undone.</string>
    <string name="delete_expense_label">Delete expense</string>
    <string name="delete_income">Delete income?</string>
    <string name="delete_income_label">Delete income</string>
    <string name="consumption_per_bird">CONSUMPTION PER BIRD</string>
    <string name="total_feed_consumed">TOTAL FEED CONSUMED</string>
    <string name="feed_type">Feed type</string>
    <string name="_0_0">0.0</string>
    <string name="set_vaccination_days">Set vaccination days</string>
    <string name="breed">Breed</string>
    <string name="add_breed">Add breed</string>
    <string name="batch_name">Batch name</string>
    <string name="date_received">Date Received</string>
    <string name="number_of_chicks_placed">Number of chicks placed</string>
    <string name="price_per_bird">Price Per Bird</string>
    <string name="donor_flock">Donor flock</string>
    <string name="health">Health</string>
    <string name="vaccines">Vaccines</string>
    <string name="health_of_flock">Health of flock</string>
    <string name="mortality">Mortality</string>
    <string name="culls">Culls</string>
    <string name="bags_50kg">Bags(50Kg)</string>
    <string name="vaccination">Vaccination</string>
    <string name="actual">Actual</string>
...
    <string name="age">Age</string>
    <string name="close">Close</string>
    <string name="reopen">Reopen</string>
    <string name="delete">Delete</string>
    <string name="invalid_username_or_password_try_again">Invalid username or password. Try again</string>
    <string name="password_invalid_message">"Password should contain letters, numbers and symbols and should be at least 8 characters long"</string>
    <string name="skip">Skip</string>
    <string name="action_failed_please_try_again">Action failed. Please try again.</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="delete_account">Delete Account</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
...
    <string name="total_expenses">Total Expenses</string>
    <string name="healthy_birds">Healthy Birds</string>
    <string name="vaccination_name">Vaccination Name</string>
    <string name="add_vaccination">Add Vaccination</string>
    <string name="vaccination_date">Vaccination Date</string>
    <string name="no_vaccine_reminders">You will not be able to receive vaccination reminders.</string>
    <string name="actual_weight">Actual weight</string>
    <string name="chicken_sale">Chicken Sale</string>
    <string name="income_type">Income type</string>
    <string name="week_9">Week 9</string>
    <string name="week_10">Week 10</string>
    <string name="week_11">Week 11</string>
    <string name="week_12">Week 12</string>
...
    <string name="tray_size">Tray size</string>
    <string name="broiler_starter">Broiler Starter</string>
    <string name="pullet_starter">Pullet Starter</string>
    <string name="pullet_grower">Pullet Grower</string>
    <string name="layers_mash">Layers Mash</string>
    <string name="pre_layer">Prelayer</string>
    <string name="flock_type">Flock type</string>
    <string name="not_enough_stock">Not enough stock available. Reduce the quantity.</string>
    <string name="mass_unit">Mass Unit</string>
    <string name="bag_size">Feed Bag Size</string>
    <string-array name="types_of_flocks">
        <item>Broiler</item>
        <item>Layer</item>
        <item>Village Chicken</item>
    </string-array>
    <string-array name="income_type_options">
        <item>Chicken Sale</item>
        <item>Manure</item>
        <item>Other</item>
...
