...
    deleteFlock: (Int) -> Unit,
    onClose: (Flock) -> Unit,
    contentType: ContentType,
    onOverflowMenuClicked: (Int) -> Unit,
    eggsInventoryViewModel: EggsInventoryViewModel
) {
    var flockList = flocks.filter { it.active }
    val listState = rememberLazyListState()
    var isFilterMenuShowing by remember { mutableStateOf(false) }

    Scaffold(
        modifier = modifier,
        topBar = {
...
                exit = slideOut(tween(200, easing = FastOutSlowInEasing)) {
                    IntOffset(180, 90)
                }
            ) {
                FloatingActionButton(
                    modifier = Modifier
                        .semantics { contentDescription = "FlockAddition" },
                    onClick = navigateToAddFlock,
                    shape = ShapeDefaults.Small,
                    containerColor = MaterialTheme.colorScheme.secondary
                ) {
                    Icon(
                        imageVector = Icons.Default.Add,
...
