...
    private var mortality: String = "0",
    val imageResourceId: Int = R.drawable.add_flock_placeholder,
    private var culls: String = "0",
    val enabled: Boolean = false,
    val active: Boolean = true
) {
    val broilerOptions = mutableListOf("Hybrid", "Ross", "Ross 308","Zamhatch", "Tiger")
    val layerTypeOptions = mutableListOf("Hybrid Brown Layer", "Hybrid Zambro", "Lohmann Brown Classic")
    val villageTypeOptions = mutableListOf("Hybrid Zambro")

    fun setDate(date: String) {
        datePlaced = derivedStateOf { date }.value
    }
...
