...
    navigateToAddIncomeScreen: (Int, Int) -> Unit,
    navigateToAddExpenseScreen: (Int, Int) -> Unit,
    userPrefsViewModel: UserPrefsViewModel,
    accountID: Int
) {
    HorizontalPager(
        modifier = Modifier.semantics { contentDescription = "horizontal pager" },
        state = pagerState,
        pageSpacing = 8.dp,
        userScrollEnabled = true,
        reverseLayout = false,
        beyondViewportPageCount = 0,
        pageSize = PageSize.Fill,
...
